feat(rule): rename a single file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "commonjs",
     "outDir": "./dist",
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,
     "target": "es5"
   },
   "include": ["./package.json", "./src/**/*.ts"],
