--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "author": "Jamie Mason (https://github.com/JamieMason)",
   "bugs": "https://github.com/JamieMason/eslint-plugin-move-files/issues",
   "devDependencies": {
-    "@types/jest": "24.0.12",
+    "@types/eslint": "4.16.6",
+    "@types/jest": "24.0.15",
     "@types/mock-fs": "3.6.30",
-    "@types/node": "12.0.0",
+    "@types/node": "12.0.10",
     "eslint": "5.16.0",
     "jest": "24.8.0",
     "mock-fs": "4.10.1",
-    "prettier": "1.17.0",
+    "prettier": "1.18.2",
     "rimraf": "2.6.3",
     "ts-jest": "24.0.2",
-    "tslint": "5.16.0",
-    "typescript": "3.4.5"
+    "tslint": "5.18.0",
+    "typescript": "3.5.2"
   },
   "files": [
     "dist"
@@ -40,5 +41,9 @@
     "prelint": "npm run format",
     "prepack": "npm run build",
     "test": "jest --runInBand"
+  },
+  "dependencies": {
+    "@types/fs-extra": "8.0.0",
+    "fs-extra": "8.1.0"
   }
 }
