--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "target": "es5"
   },
   "include": ["./package.json", "./src/**/*.ts"],
-  "exclude": ["./src/**/*.spec.ts"]
+  "exclude": ["./src/**/*.spec.ts", "./src/test/**"]
 }
