--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-plugin-move-files",
-  "description": "Move files around while keeping imports up to date",
+  "description": "Move and rename files while keeping imports up to date",
   "version": "0.0.0",
   "author": "Jamie Mason (https://github.com/JamieMason)",
   "bugs": "https://github.com/JamieMason/eslint-plugin-move-files/issues",
