[WIP] test: replace RuleTester with runner closer to real behaviour

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "lib": ["es2017", "es6"],
     "module": "commonjs",
